<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="800sp"
        android:layout_height="wrap_content"
        android:background="@drawable/cardmodal"
        android:backgroundTint="#FFFFFF"
        android:orientation="vertical"
        android:padding="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_black"
            android:text="@string/alerta"
            android:textColor="@color/colorRed"
            android:textSize="28sp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/nunito_extrabold"
            android:gravity="center_horizontal"
            android:text="@string/alerta_iniciodia_ingreso"
            android:textAlignment="center"
            android:textColor="@color/gris"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelarIngreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertaNo"
                android:fontFamily="@font/nunito_extrabold"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:layout_margin="5sp"
                android:backgroundTint="@color/colorDanger"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnAceptarIngreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertaSI"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:backgroundTint="@color/colorSuccess"
                android:layout_margin="5sp"
                android:fontFamily="@font/nunito_extrabold"
                app:cornerRadius="14sp"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>