<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="800sp"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:orientation="vertical"
        android:backgroundTint="@color/white"
        android:background="@drawable/cardmodal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ope_soles"
            android:textSize="22sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/nunito_black"
            android:layout_gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alertSoles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            android:hint="Monto Soles"
            app:startIconDrawable="@drawable/icon_money"
            app:endIconMode="clear_text"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextAppearance="@style/AppTheme.TextInputLayout.Hint"
            app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputMontoSoles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:inputType="number"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnCancelarSoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorDanger"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/btn_cancelar"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnAgregarSoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSuccess"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/btn_agregar"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10sp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>