<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="800sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp"
        android:background="@drawable/cardmodal"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/ope_galones"
                android:fontFamily="@font/nunito_black"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:layout_marginBottom="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertGalones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                android:hint="Cantidad de Galones"
                app:startIconDrawable="@drawable/icon_galones"
                app:endIconMode="clear_text"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/AppTheme.TextInputLayout.Hint"
                app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCantidadGalones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_semibold"
                    android:inputType="number"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnCancelarGalones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorDanger"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/btn_cancelar"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnAgregarGalones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorSuccess"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/btn_agregar"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10sp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>