<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="800sp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:backgroundTint="@color/white"
            android:background="@drawable/cardmodal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_black"
                android:text="@string/ope_NDespachoLargo"
                android:textColor="@color/blue"
                android:textSize="22sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertCCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Seleccionar Cliente de Credito"
                app:boxBackgroundColor="#E4E4E4"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:endIconMode="clear_text"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/AppTheme.TextInputLayout.Hint"
                app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCCliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semibold"
                        android:inputType="number"
                        android:focusable="false"
                        android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertCRazSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingresar Razon Social"
                app:boxBackgroundColor="#E4E4E4"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:endIconMode="clear_text"
                app:counterEnabled="true"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/AppTheme.TextInputLayout.Hint"
                app:counterTextAppearance="@style/AppTheme.TextInputLayout.Counter"
                app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCRazSocial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semibold"
                        android:textSize="16sp"
                        android:focusable="false"
                        android:inputType="textCapCharacters" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nro. Tarjeta"
                app:boxBackgroundColor="#E4E4E4"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                android:layout_marginBottom="5sp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/AppTheme.TextInputLayout.Hint"
                app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_CNTarjeta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingresar N° de Placa"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:endIconMode="clear_text"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/AppTheme.TextInputLayout.Hint"
                app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error" >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCPlaca"
                        android:fontFamily="@font/nunito_semibold"
                        android:textSize="16sp"
                        android:text="000-0000"
                        android:inputType="textCapCharacters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingresar Dirección"
                app:boxBackgroundColor="#E4E4E4"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:endIconMode="clear_text"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/AppTheme.TextInputLayout.Hint"
                app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCDireccion"
                        android:fontFamily="@font/nunito_semibold"
                        android:textSize="16sp"
                        android:focusable="false"
                        android:inputType="textCapCharacters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertKilometraje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingresar Kilometraje"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:endIconMode="clear_text"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/AppTheme.TextInputLayout.Hint"
                app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCKilometraje"
                        android:fontFamily="@font/nunito_semibold"
                        android:textSize="16sp"
                        android:inputType="textCapCharacters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alertObservacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingresar Observación"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:endIconMode="clear_text"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/AppTheme.TextInputLayout.Hint"
                app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCObservacion"
                        android:fontFamily="@font/nunito_semibold"
                        android:textSize="16sp"
                        android:inputType="textCapCharacters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancelarNotaDespacho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancelar"
                    android:fontFamily="@font/nunito_extrabold"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:layout_margin="5sp"
                    android:backgroundTint="@color/colorDanger"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:cornerRadius="10sp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnAgregarNotaDespacho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_agregar"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:backgroundTint="@color/colorSuccess"
                    android:layout_margin="5sp"
                    android:fontFamily="@font/nunito_extrabold"
                    app:cornerRadius="10sp"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>